# hymnary

./: .gitignore  PLAN.md  README.md  input_data_w_jayes.md  main.py  pyproject.toml
data/interim/: checkpoint.json  filter_checkpoint.json  search_index.json
data/processed/: classifications.json  hymn_tune_data.xlsx  hymn_tune_index.json  hymn_tune_index_filtered.json  organ_book_matches.csv  summary.csv  summary_filtered.csv  tunes.json
data/raw/: MP HymnTuneNames.csv
docs/: about.html  hymns.html  index.html  search.json
docs/site_libs/bootstrap/: bootstrap-7b5956d3aeac38b3ab5fbe077a66c032.min.css
site/: _quarto.yml  about.qmd  hymns.qmd  index.qmd  styles.css  styles.scss
src/: __init__.py  __main__.py  classifier.py  config.py  filter_pipeline.py  matcher.py  parser.py  pipeline.py  scraper.py  utils.py
